--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Dropbox related
+.DS_Store .
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -6,7 +9,6 @@
 *.fls
 *.out
 *.toc
-*.fmt
 
 ## Intermediate documents:
 *.dvi
@@ -15,6 +17,7 @@
 # *.ps
 # *.eps
 # *.pdf
+main.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
@@ -27,18 +30,15 @@
 
 ## Build tool auxiliary files:
 *.fdb_latexmk
-*.synctex
 *.synctex.gz
 *.synctex.gz(busy)
 *.pdfsync
 
 ## Auxiliary and intermediate files from other packages:
+
 # algorithms
 *.alg
 *.loa
-
-# achemso
-acs-*.bib
 
 # amsthm
 *.thm
@@ -47,9 +47,6 @@ acs-*.bib
 *.nav
 *.snm
 *.vrb
-
-# cprotect
-*.cpt
 
 #(e)ledmac/(e)ledpar
 *.end
@@ -73,16 +70,8 @@ acs-*.bib
 *.glo
 *.gls
 
-# gnuplottex
-*-gnuplottex-*
-
 # hyperref
 *.brf
-
-# knitr
-*-concordance.tex
-*.tikz
-*-tikzDictionary
 
 # listings
 *.lol
@@ -96,18 +85,13 @@ acs-*.bib
 # minitoc
 *.maf
 *.mtc
-*.mtc[0-9]
-*.mtc[1-9][0-9]
+*.mtc0
 
 # minted
-_minted*
 *.pyg
 
 # morewrites
 *.mw
-
-# mylatexformat
-*.fmt
 
 # nomencl
 *.nlo
@@ -122,38 +106,8 @@ _minted*
 *.sympy
 sympy-plots-for-*.tex/
 
-# pdfcomment
-*.upa
-*.upb
-
-#pythontex
-*.pytxcode
-pythontex-files-*/
-
-# Texpad
-.texpadtmp
-
-# TikZ & PGF
-*.dpth
-*.md5
-*.auxlock
-
 # todonotes
 *.tdo
 
 # xindy
 *.xdy
-
-# xypic precompiled matrices
-*.xyc
-
-# WinEdt
-*.bak
-*.sav
-
-# endfloat
-*.ttt
-*.fff
-
-# Latexian
-TSWLatexianTemp*
