modify template for tex-midterm

--- a/tex-midterm/Makefile
+++ b/tex-midterm/Makefile
@@ -2,15 +2,12 @@
 
 DRAFT_BUILD_DIR = draft
 
-all: draft-build-dir $(DRAFT_BUILD_DIR)/proposal.pdf $(DRAFT_BUILD_DIR)/progress.pdf 
+all: draft-build-dir $(DRAFT_BUILD_DIR)/progress.pdf 
 
 .PHONY: draft-build-dir
 draft-build-dir:
 	test -d $(DRAFT_BUILD_DIR)/ || mkdir -p $(DRAFT_BUILD_DIR)
 
-.PHONY: $(DRAFT_BUILD_DIR)/proposal.pdf
-$(DRAFT_BUILD_DIR)/proposal.pdf:
-	latexmk -f -pdf -output-directory=$(DRAFT_BUILD_DIR)/ proposal.tex
 
 .PHONY: $(DRAFT_BUILD_DIR)/progress.pdf
 $(DRAFT_BUILD_DIR)/progress.pdf:
