final tex files

--- a/tex/Makefile
+++ b/tex/Makefile
@@ -2,7 +2,7 @@
 
 DRAFT_BUILD_DIR = draft
 
-all: draft-build-dir $(DRAFT_BUILD_DIR)/proposal.pdf $(DRAFT_BUILD_DIR)/progress.pdf 
+all: draft-build-dir $(DRAFT_BUILD_DIR)/proposal.pdf $(DRAFT_BUILD_DIR)/progress.pdf $(DRAFT_BUILD_DIR)/final.pdf 
 
 .PHONY: draft-build-dir
 draft-build-dir:
@@ -15,6 +15,10 @@ $(DRAFT_BUILD_DIR)/proposal.pdf:
 .PHONY: $(DRAFT_BUILD_DIR)/progress.pdf
 $(DRAFT_BUILD_DIR)/progress.pdf:
 	latexmk -f -pdf -output-directory=$(DRAFT_BUILD_DIR)/ progress.tex
+
+.PHONY: $(DRAFT_BUILD_DIR)/final.pdf
+$(DRAFT_BUILD_DIR)/final.pdf:
+	latexmk -f -pdf -output-directory=$(DRAFT_BUILD_DIR)/ final.tex
 
 clean:
 	rm -rf $(DRAFT_BUILD_DIR)/ *~ core *.blg *.toc *.bbl *.out *.aux *.log
